--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-math": "^5.0.0",
     "hexo-minify": "^1.8.1",
